fix: email input in footer has wrong size

--- a/css/styles.css
+++ b/css/styles.css
@@ -597,6 +597,7 @@ img {
 
 .subscribe-form__email {
   flex-grow: 2;
+  max-width: 264px;
 }
 
 .subscribe-form .form-input {
